Fixed overflow issue on mobile and small window settings

--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,11 @@ body {
     color: #f0f0f0;
     display: flex;
     flex-direction: column;
-    
+    overflow-x: hidden;
+}
+
+section {
+    overflow: hidden;
 }
 
 .main > * {
@@ -17,7 +21,6 @@ body {
 
 .hero {
     height: 100vh;
-    width: 100%;
     justify-content: center;
     display: flex;
     align-items: center;
@@ -66,11 +69,13 @@ body {
     text-decoration: none;
     font-size: 1.5rem;
     padding: 1vh 2vw;
+    overflow-x: hidden;
 }
 
 .btn-text {
     color: #f0f0f0;
     font-size: 1rem;
+    overflow-x: hidden;
 }
 
 .about-section {
@@ -159,7 +164,6 @@ p a {
 
 .contact-panel {
     background-color: #1c2e4a;
-    width: 50%;
     padding-block: 3vh;
     padding-inline: 3vw;
 }
